# discord-rpc

./: CMakeLists.txt  build.sh
project/: .gitignore  discord.sln  discord.vcxproj
